{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 71,
  "lineage": "b5c15cd7-0f58-bcdc-c7d2-319e66eb2685",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip_dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0908c2a8a2967a4b0",
            "association_id": "eipassoc-08e088ef1c4f924cc",
            "domain": "vpc",
            "id": "eipalloc-0908c2a8a2967a4b0",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0fd9b6b92efee6dfb",
            "private_dns": "ip-10-15-1-246.ec2.internal",
            "private_ip": "10.15.1.246",
            "public_dns": "ec2-34-199-79-129.compute-1.amazonaws.com",
            "public_ip": "34.199.79.129",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip_shared",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f1b36082112c498f",
            "association_id": "eipassoc-07875ca930e4c87f1",
            "domain": "vpc",
            "id": "eipalloc-0f1b36082112c498f",
            "network_border_group": "us-east-1",
            "network_interface": "eni-089577b2cec5a4f4f",
            "private_dns": "ip-10-25-1-201.ec2.internal",
            "private_ip": "10.25.1.201",
            "public_dns": "ec2-52-72-21-177.compute-1.amazonaws.com",
            "public_ip": "52.72.21.177",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0453ec754f44f9a4a",
            "arn": "arn:aws:ec2:us-east-1:078625870929:instance/i-0ab82d93d36a27026",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ab82d93d36a27026",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "finalprojectkey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0a8f5c8b473aa86d9",
            "private_dns": "ip-10-25-1-64.ec2.internal",
            "private_ip": "10.25.1.64",
            "public_ip": "3.85.212.6",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-01ed13e625651f3e8",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-05ec9ac8bc1d49b5d"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-095b8bb04b6787698",
            "tags": {
              "Name": "bastion"
            },
            "tags_all": {
              "Name": "bastion"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-05ec9ac8bc1d49b5d"
            ]
          },
          "dependencies": [
            "aws_security_group.bastion_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "webserver1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0453ec754f44f9a4a",
            "arn": "arn:aws:ec2:us-east-1:078625870929:instance/i-06ca9df6cf219c3a3",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06ca9df6cf219c3a3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "finalprojectkey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-07406125ba324fa5d",
            "private_dns": "ip-10-15-3-101.ec2.internal",
            "private_ip": "10.15.3.101",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0f2eea01c93662099",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d2006cc8acd21c97",
            "tags": {
              "Name": "webserver1"
            },
            "tags_all": {
              "Name": "webserver1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0e4cc16cabeee66f5"
            ]
          },
          "dependencies": [
            "aws_security_group.webserver_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "webserver2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0453ec754f44f9a4a",
            "arn": "arn:aws:ec2:us-east-1:078625870929:instance/i-027080b4a16a15a51",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-027080b4a16a15a51",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "finalprojectkey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0ab00afe90c9faca3",
            "private_dns": "ip-10-15-4-51.ec2.internal",
            "private_ip": "10.15.4.51",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-089404509240ae372",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a5c2766c35183e46",
            "tags": {
              "Name": "webserver2"
            },
            "tags_all": {
              "Name": "webserver2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0e4cc16cabeee66f5"
            ]
          },
          "dependencies": [
            "aws_security_group.webserver_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw_dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:078625870929:internet-gateway/igw-06ba524bc6b51cf2d",
            "id": "igw-06ba524bc6b51cf2d",
            "owner_id": "078625870929",
            "tags": {
              "Name": "igw-Dev"
            },
            "tags_all": {
              "Name": "igw-Dev"
            },
            "vpc_id": "vpc-079a8b38f274e63a7"
          },
          "dependencies": [
            "aws_vpc.vpc_dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw_shared",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:078625870929:internet-gateway/igw-020dde4124e2adfd9",
            "id": "igw-020dde4124e2adfd9",
            "owner_id": "078625870929",
            "tags": {
              "Name": "igw-Shared"
            },
            "tags_all": {
              "Name": "igw-Shared"
            },
            "vpc_id": "vpc-0e09d49919f3dbcb3"
          },
          "dependencies": [
            "aws_vpc.vpc_shared"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0908c2a8a2967a4b0",
            "connectivity_type": "public",
            "id": "nat-07d233cc75886f778",
            "network_interface_id": "eni-0fd9b6b92efee6dfb",
            "private_ip": "10.15.1.246",
            "public_ip": "34.199.79.129",
            "subnet_id": "subnet-0b20719c2a4e02198",
            "tags": {
              "Name": "nat-Dev"
            },
            "tags_all": {
              "Name": "nat-Dev"
            }
          },
          "dependencies": [
            "aws_eip.nat_eip_dev",
            "aws_subnet.public_sn1_dev",
            "aws_vpc.vpc_dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_shared",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f1b36082112c498f",
            "connectivity_type": "public",
            "id": "nat-0ea792e8ed5c48c60",
            "network_interface_id": "eni-089577b2cec5a4f4f",
            "private_ip": "10.25.1.201",
            "public_ip": "52.72.21.177",
            "subnet_id": "subnet-095b8bb04b6787698",
            "tags": {
              "Name": "nat-Shared"
            },
            "tags_all": {
              "Name": "nat-Shared"
            }
          },
          "dependencies": [
            "aws_eip.nat_eip_shared",
            "aws_subnet.public_sn1_shared",
            "aws_vpc.vpc_shared"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt_dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:078625870929:route-table/rtb-05a6719a587878d79",
            "id": "rtb-05a6719a587878d79",
            "owner_id": "078625870929",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-07d233cc75886f778",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-rt-Dev"
            },
            "tags_all": {
              "Name": "private-rt-Dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-079a8b38f274e63a7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_eip_dev",
            "aws_nat_gateway.nat_dev",
            "aws_subnet.public_sn1_dev",
            "aws_vpc.vpc_dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt_dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:078625870929:route-table/rtb-01eed11583a0066bf",
            "id": "rtb-01eed11583a0066bf",
            "owner_id": "078625870929",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06ba524bc6b51cf2d",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-rt-Dev"
            },
            "tags_all": {
              "Name": "public-rt-Dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-079a8b38f274e63a7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw_dev",
            "aws_vpc.vpc_dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "shared_private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:078625870929:route-table/rtb-05a67803d74b1ca87",
            "id": "rtb-05a67803d74b1ca87",
            "owner_id": "078625870929",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0ea792e8ed5c48c60",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "shared-private-route-table"
            },
            "tags_all": {
              "Name": "shared-private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e09d49919f3dbcb3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_eip_shared",
            "aws_nat_gateway.nat_shared",
            "aws_subnet.public_sn1_shared",
            "aws_vpc.vpc_shared"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "shared_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:078625870929:route-table/rtb-0395c109e793b6440",
            "id": "rtb-0395c109e793b6440",
            "owner_id": "078625870929",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-020dde4124e2adfd9",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "shared-public-route-table"
            },
            "tags_all": {
              "Name": "shared-public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e09d49919f3dbcb3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw_shared",
            "aws_vpc.vpc_shared"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rt_assoc_sn1_dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-003be4c597220858b",
            "route_table_id": "rtb-05a6719a587878d79",
            "subnet_id": "subnet-0d2006cc8acd21c97"
          },
          "dependencies": [
            "aws_eip.nat_eip_dev",
            "aws_nat_gateway.nat_dev",
            "aws_route_table.private_rt_dev",
            "aws_subnet.private_sn1_dev",
            "aws_subnet.public_sn1_dev",
            "aws_vpc.vpc_dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rt_assoc_sn2_dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0937b1677c3446ac8",
            "route_table_id": "rtb-05a6719a587878d79",
            "subnet_id": "subnet-0a5c2766c35183e46"
          },
          "dependencies": [
            "aws_eip.nat_eip_dev",
            "aws_nat_gateway.nat_dev",
            "aws_route_table.private_rt_dev",
            "aws_subnet.private_sn2_dev",
            "aws_subnet.public_sn1_dev",
            "aws_vpc.vpc_dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_assoc_sn1_dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0de76466a5a0aa552",
            "route_table_id": "rtb-01eed11583a0066bf",
            "subnet_id": "subnet-0b20719c2a4e02198"
          },
          "dependencies": [
            "aws_internet_gateway.igw_dev",
            "aws_route_table.public_rt_dev",
            "aws_subnet.public_sn1_dev",
            "aws_vpc.vpc_dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_assoc_sn2_dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-035a27ca208e51c86",
            "route_table_id": "rtb-01eed11583a0066bf",
            "subnet_id": "subnet-03aab22dd187b8187"
          },
          "dependencies": [
            "aws_internet_gateway.igw_dev",
            "aws_route_table.public_rt_dev",
            "aws_subnet.public_sn2_dev",
            "aws_vpc.vpc_dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "shared_private_rt_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e3fd50df17cf8467",
            "route_table_id": "rtb-05a67803d74b1ca87",
            "subnet_id": "subnet-0dda6521ef51fc53b"
          },
          "dependencies": [
            "aws_eip.nat_eip_shared",
            "aws_nat_gateway.nat_shared",
            "aws_route_table.shared_private_rt",
            "aws_subnet.private_sn1_shared",
            "aws_subnet.public_sn1_shared",
            "aws_vpc.vpc_shared"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "shared_public_rt_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-067cafdf2cb0a5a53",
            "route_table_id": "rtb-0395c109e793b6440",
            "subnet_id": "subnet-095b8bb04b6787698"
          },
          "dependencies": [
            "aws_internet_gateway.igw_shared",
            "aws_route_table.shared_public_rt",
            "aws_subnet.public_sn1_shared",
            "aws_vpc.vpc_shared"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:078625870929:security-group/sg-05ec9ac8bc1d49b5d",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05ec9ac8bc1d49b5d",
            "ingress": [
              {
                "cidr_blocks": [
                  "142.55.0.11/32"
                ],
                "description": "Allow SSH from MyLaptop",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20241128192200292100000001",
            "name_prefix": "terraform-",
            "owner_id": "078625870929",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "bastion-sg"
            },
            "tags_all": {
              "Name": "bastion-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e09d49919f3dbcb3"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "webserver_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:078625870929:security-group/sg-0e4cc16cabeee66f5",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e4cc16cabeee66f5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5000
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-0d8b4a8f799b3e3c0"
                ],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05ec9ac8bc1d49b5d"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20241129012235273200000001",
            "name_prefix": "terraform-",
            "owner_id": "078625870929",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "webserver-sg"
            },
            "tags_all": {
              "Name": "webserver-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-079a8b38f274e63a7"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ssh_from_bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 22,
            "id": "sgrule-626335524",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0e4cc16cabeee66f5",
            "self": false,
            "source_security_group_id": "sg-05ec9ac8bc1d49b5d",
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.webserver_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_sn1_dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:078625870929:subnet/subnet-0d2006cc8acd21c97",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.15.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d2006cc8acd21c97",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "078625870929",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-SN1-Dev"
            },
            "tags_all": {
              "Name": "private-SN1-Dev"
            },
            "vpc_id": "vpc-079a8b38f274e63a7"
          },
          "dependencies": [
            "aws_vpc.vpc_dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_sn1_shared",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:078625870929:subnet/subnet-0dda6521ef51fc53b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.25.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dda6521ef51fc53b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "078625870929",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-SN1-Shared"
            },
            "tags_all": {
              "Name": "private-SN1-Shared"
            },
            "vpc_id": "vpc-0e09d49919f3dbcb3"
          },
          "dependencies": [
            "aws_vpc.vpc_shared"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_sn2_dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:078625870929:subnet/subnet-0a5c2766c35183e46",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.15.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a5c2766c35183e46",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "078625870929",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-SN2-Dev"
            },
            "tags_all": {
              "Name": "private-SN2-Dev"
            },
            "vpc_id": "vpc-079a8b38f274e63a7"
          },
          "dependencies": [
            "aws_vpc.vpc_dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_sn1_dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:078625870929:subnet/subnet-0b20719c2a4e02198",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.15.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b20719c2a4e02198",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "078625870929",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-SN1-Dev"
            },
            "tags_all": {
              "Name": "public-SN1-Dev"
            },
            "vpc_id": "vpc-079a8b38f274e63a7"
          },
          "dependencies": [
            "aws_vpc.vpc_dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_sn1_shared",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:078625870929:subnet/subnet-095b8bb04b6787698",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.25.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-095b8bb04b6787698",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "078625870929",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-SN1-Shared"
            },
            "tags_all": {
              "Name": "public-SN1-Shared"
            },
            "vpc_id": "vpc-0e09d49919f3dbcb3"
          },
          "dependencies": [
            "aws_vpc.vpc_shared"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_sn2_dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:078625870929:subnet/subnet-03aab22dd187b8187",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.15.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03aab22dd187b8187",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "078625870929",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-SN2-Dev"
            },
            "tags_all": {
              "Name": "public-SN2-Dev"
            },
            "vpc_id": "vpc-079a8b38f274e63a7"
          },
          "dependencies": [
            "aws_vpc.vpc_dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:078625870929:vpc/vpc-079a8b38f274e63a7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.15.0.0/16",
            "default_network_acl_id": "acl-037012b6b75ca8fcc",
            "default_route_table_id": "rtb-05303b32ab60a372d",
            "default_security_group_id": "sg-0cbe42be35ec8d7ec",
            "dhcp_options_id": "dopt-05b4bd79353b8b3b0",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-079a8b38f274e63a7",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05303b32ab60a372d",
            "owner_id": "078625870929",
            "tags": {
              "Name": "VPC-Dev"
            },
            "tags_all": {
              "Name": "VPC-Dev"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_shared",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:078625870929:vpc/vpc-0e09d49919f3dbcb3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.25.0.0/16",
            "default_network_acl_id": "acl-0976e03914ab16c73",
            "default_route_table_id": "rtb-050bb74888761c8ee",
            "default_security_group_id": "sg-0a7a90b48b51a5629",
            "dhcp_options_id": "dopt-05b4bd79353b8b3b0",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0e09d49919f3dbcb3",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-050bb74888761c8ee",
            "owner_id": "078625870929",
            "tags": {
              "Name": "VPC-Shared"
            },
            "tags_all": {
              "Name": "VPC-Shared"
            }
          }
        }
      ]
    }
  ]
}